--- a/theme.css
+++ b/theme.css
@@ -33,8 +33,11 @@ body {
 	color: red;
 }
 
+
+/* Timer control page below here */
+
 .schedulePane {
-	width: 70%;
+	width: 60%;
 	height: 90vh;
 	margin: 3vh;
 }
@@ -48,25 +51,80 @@ body {
 
 .scheduleHeader {
 	height: 5%;
+}
+
+.scheduleHeaderText {
 	text-align: center;
+	font-family: sans-serif;
+	width: 40%;
 }
 
-.actualSchedule {
+.timelineDiv {
 	height: 95%;
+/*	preserveAspectRatio: xMinYMin meet;
+	viewBox: 0 0 600 400;*/
 }
 
-#scheduled {
+.svg-container {
+	display: inline-block;
+	/*position: relative;*/
+	width: 100%;
+	height: 100%;
+	vertical-align: top;
+	overflow: hidden;
+	shape-rendering: crispEdges;
+}
+
+.svg-content-responsive {
+	display: inline-block;
+	/*position: absolute;*/
+	width: 100%;
+	height: 100%;
+	top: 10px;
+	left: 0;
+}
+
+#left {
 	float: left;
 }
 
-#actual {
+#right {
 	float: right;
 }
 
 .event {
 	text-align: center;
+	rx: 5;
+	ry: 5;
 }
 
 .svgOverlay {
 	pointer-events: none;	
+}
+
+.majorLine {
+	stroke-width: 1;
+	stroke: #777777;
+}
+
+.majorLineText {
+	font-family: sans-serif;
+	font-size: 1em;
+	text-anchor: middle;
+	dominant-baseline: middle;
+}
+
+.minorLine {
+	color: blue;
+}
+
+.eventText {
+	font-family: sans-serif;
+	font-size: 1em;
+	fill: #444444;
+	dominant-baseline: hanging;
+}
+
+.backgroundRect {
+	fill: #dddddd;
 }
