--- a/theme.css
+++ b/theme.css
@@ -103,8 +103,9 @@ body {
 }
 
 .majorLine {
-	stroke-width: 1;
-	stroke: #777777;
+	stroke-width: 2;
+	stroke: black;
+	stroke-opacity: .4;
 }
 
 .majorLineText {
@@ -115,13 +116,17 @@ body {
 }
 
 .minorLine {
-	color: blue;
+	stroke-width: 1;
+	stroke: black;
+	stroke-dasharray: 1, 1;
+	stroke-opacity: .3;
 }
 
 .eventText {
 	font-family: sans-serif;
 	font-size: 1em;
-	fill: #444444;
+	fill: black;
+	fill-opacity: .8;
 	dominant-baseline: hanging;
 }
 
