--- a/theme.css
+++ b/theme.css
@@ -112,11 +112,10 @@ body {
 
 .majorLineText {
 	font-family: sans-serif;
-	font-size: 1em;
+	font-size: 1.2em;
 	text-anchor: middle;
 	dominant-baseline: middle;
 	shape-rendering: crispEdges;
-
 }
 
 .minorLine {
@@ -131,6 +130,14 @@ body {
 	font-family: sans-serif;
 	font-size: 1em;
 	font-weight: bold;
+	fill: black;
+	fill-opacity: .75;
+	dominant-baseline: hanging;
+}
+
+.speakerText {
+	font-family: sans-serif;
+	font-size: 1em;
 	fill: black;
 	fill-opacity: .7;
 	dominant-baseline: hanging;
