--- a/timer/templates/timer/timerControl.html
+++ b/timer/templates/timer/timerControl.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<head>
-<link rel="stylesheet" type="text/css" href="theme.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.1/knockout-min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="https://d3js.org/d3-path.v1.min.js"></script>
-<script src="moment.min.js"></script>
-</head>
+{% extends "timer/base.html" %}
+{% load staticfiles %}
+
+{% block content %}
 <body>
+	<div class=header>
+		<button type="button" class="btn btn-lg btn-block col-md-6" data-bind="click:saveSchedule">Save Schedule</button>
+		<span data-bind='text: scheduleName'></span>
+	</div>
 	<div class=schedulePane>
 		<div class=scheduleHeader>
 			<div class="scheduleHeaderText left h1">Scheduled</div>
@@ -91,6 +89,7 @@
 
 	</div>
 
-
-	<script src="timer-control.js"></script>
+	<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}" </script>
+	<script src="../static/timerControl.js"></script>
 </body>
+{% endblock %}
