--- a/timer/templates/timer/timer.html
+++ b/timer/templates/timer/timer.html
@@ -7,7 +7,7 @@
     <span data-bind="text: parsedTime"></span>
   </div>
 </div>
-
+<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}" </script>
 <script src="../static/timer.js"></script>
 
 {% endblock %}
