--- a/timer/templates/timer/timerControl.html
+++ b/timer/templates/timer/timerControl.html
@@ -4,9 +4,15 @@
 {% block content %}
 <body>
 	<div class=header>
-		<button type="button" class="btn btn-lg btn-block col-md-6" data-bind="click:saveSchedule">Save Schedule</button>
-		<span data-bind='text: scheduleName'></span>
-	</div>
+		<form class="form-inline">
+			<div class="form-group">
+				<input type="text" class="form-control" id="scheduleName" data-bind="textInput: scheduleName">
+			</div>
+			<div class="form-group">
+				<input type="text" class="form-control" id="scheduleDate" data-bind="textInput: scheduleDate">
+			</div>
+			<button type="button" class="btn btn-default" data-bind="click:saveSchedule, css: { 'btn-primary': scheduleUnsaved}">Save Schedule</button>
+		</form>
 	<div class=schedulePane>
 		<div class=scheduleHeader>
 			<div class="scheduleHeaderText left h1">Scheduled</div>
@@ -89,7 +95,7 @@
 
 	</div>
 
-	<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}" </script>
+	<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}"; window._isNew="{{isNew}}";</script>
 	<script src="../static/timerControl.js"></script>
 </body>
 {% endblock %}
