--- a/timer/templates/timer/base.html
+++ b/timer/templates/timer/base.html
@@ -8,7 +8,7 @@
 <script src="https://d3js.org/d3-path.v1.min.js"></script>
 </head>
 <body>
-<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}"; window._isNew="{{isNew}}"; window.initialActiveEvent="{{activeEvent}}";</script>
+<script type="text/javascript"> window.CSRF_TOKEN = "{{ csrf_token }}"; window._initialScheduleName="{{name}}"; window._initialScheduleDate="{{date}}"; window._initialScheduleUrl="{{url}}"; window._isNew="{{isNew}}"; window._initialActiveEvent="{{activeEvent}}";</script>
 
 
 {% block content %}{% endblock %}
